--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "bandb",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "pg": "^8.8.0",
-    "sequelize": "^6.21.4",
-    "sequelize-cli": "^6.4.1"
-  }
+	"name": "bandb",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "npx nodemon server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.18.1",
+		"pg": "^8.8.0",
+		"sequelize": "^6.21.4",
+		"sequelize-cli": "^6.4.1"
+	}
 }
