--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.8.0",
 		"sequelize": "^6.21.4",
 		"sequelize-cli": "^6.4.1"
