--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.8.0",
 		"sequelize": "^6.21.4",
-		"sequelize-cli": "^6.4.1"
+		"sequelize-cli": "^6.4.1",
+		"styled-components": "^5.3.5"
 	}
 }
